--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/mysql-connector-java-8.0.28.jar" sourcepath="C:/Users/Admin/Downloads/mysql-connector-java-8.0.28-sources.jar"/>
+	<classpathentry kind="lib" path="./lib/mysql-connector-j-8.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
